// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing snapshot for Toplyne's sendUserProfiles destination action: all fields 1`] = `
Object {
  "profiles": Array [
    Object {
      "creationTime": null,
      "enable_batching": true,
      "userId": "*W*AP",
      "userProperties": Object {
        "testType": "*W*AP",
      },
    },
  ],
}
`;

exports[`Testing snapshot for Toplyne's sendUserProfiles destination action: required fields 1`] = `
Object {
  "profiles": Array [
    Object {
      "creationTime": null,
      "userId": "*W*AP",
    },
  ],
}
`;
